Signed-off-by: Mukesh_50 <Mukesh_50@Mukesh>

--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,13 @@
 <configuration>
  
 <suiteXmlFiles>
-<suiteXmlFile>Regression.xml</suiteXmlFile>
+<suiteXmlFile>SalesforceTest.xml</suiteXmlFile>
 </suiteXmlFiles>
+ 
+ <properties>
+    <url>${url}</url>
+    <browser>${browser}</browser>
+</properties>
  
 </configuration>
 </plugin>
