--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-surefire-plugin</artifactId>
 <version>2.17</version>
+
+<goals>
+    <goal>test</goal>
+</goals>
 <configuration>
  
 <suiteXmlFiles>
@@ -76,11 +80,5 @@
  
 </build>
   
-  
-  
-  
-  
-  
-  
-  
+
 </project>
