Signed-off-by: Mukesh_50 <Mukesh_50@Mukesh>

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,11 @@
 </suiteXmlFiles>
  
  <properties>
-    <url>${url}</url>
+    
     <browser>${browser}</browser>
+    <url>${url}</url>
+    <username>${username}</username>
+    <password>${password}</password>
 </properties>
  
 </configuration>
