--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Mukesh_50/Downloads/java-client-3.4.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
