--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 			<scope>test</scope>
 		</dependency>
 
+<dependency>
+    <groupId>io.appium</groupId>
+    <artifactId>java-client</artifactId>
+    <version>4.0.0</version>
+</dependency>
 		<dependency>
 			<groupId>com.relevantcodes</groupId>
 			<artifactId>extentreports</artifactId>
